<resources>
    <string name="app_name">Mercury</string>
    <string name="ok">OK</string>

    <!-- Network error messages -->
    <string name="error_unexpected_error">Something went wrong. Please try again later</string>
    <string name="error_bad_connection_try_again">Bad connectivity, please try again</string>
    <string name="error_remote_server_failed">Application server could not respond. Please try later</string>
    <string name="error_paring">Parsing error</string>
    <string name="error_internet_not_connected">Please check your internet connection or try again later.</string>
    <string name="error_device_rooted">This device is rooted. We are not responsible for any kind of data loss and hack. Use it at your own risk!!</string>
    <string name="error_fb_login_failed">Facebook Login failed!!</string>
    <string name="error_session_expired">Session expired.</string>

    <string name="internet_error">Network error, please try again</string>
    <string name="error_try_again">Error, please try again</string>
    <string name="server_error_try_again">Server error, please try again</string>

    <string name="login_online">Verifying credentials...</string>
    <string name="login_offline">Your device needs to be online in order to login. Please check your connection settings.</string>

    <!-- Dialog -->
    <string name="text_retry">Retry</string>
    <string name="text_exit">Exit</string>
    <string name="text_ok">Ok</string>
    <string name="text_proceed">Proceed</string>
    <string name="text_loading">Loading…</string>
    <string name="text_update">Update</string>
    <string name="fetch_details">Fetching Data...</string>
    <string name="product_details">Fetching Product Details...</string>
    <string name="loading_wait">Loading Please wait...</string>
    <string name="profile_update">Updating Profile wait...</string>

    <!--Login Screen-->

    <string name="mobile">Enter your registered number <sup>*</sup></string>
    <string name="name"> Username <sup>*</sup></string>
    <string name="login"> Login Securely</string>
    <string name="already_acc">Create a new account ! </string>
    <string name="error_wrong_number">You have entered a wrong mobile number.</string>

    <!--SignIn Screen-->

    <string name="hint_email">Email (optional)</string>
    <string name="btn_sign_up">Create a New Account</string>
    <string name="login_mercury">Login to Mercury !</string>
    <string name="err_msg_email">You have entered a invalid email address.</string>
    <string name="err_msg_username">Please enter your username.</string>
    <string name="otp"> Enter OTP</string>
    <string name="verfication_code"> Verification Code</string>
    <string name="confim">Confirm</string>
    <string name="dob">D.O.B</string>
    <string name="resend">Resend OTP</string>
    <string name="error_wrong_otp">You have entered a wrong OTP.</string>
    <string name="blank_otp">OTP can not be blank.</string>
    <string name="otp_permission">For use OTP service, user have need to accept permission of Read Message Service.</string>
    <string name="otp_message">A One Time Password (OTP) has been sent to your mobile number.</string>
    <string name="otp_verify">Verifying OTP...</string>
    <string name="create_account">Creating Account...</string>

    <!--API key for Testing-->
    <string name="api_key">AIzaSyAmYWHUfPiGbB6Ph3Yas3JMkF1e99BJn6Q</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Logout-->
    <string name="logout_really">Do you want to Logout?</string>
    <string name="logout">Logout</string>

    <!--Image Select-->
    <string name="select_source">Select Source</string>
    <string name="permission_denied">Permission Denied</string>
    <string-array name="source_array">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>

    <!--Home Screen-->
    <string name="products">Products</string>
    <string name="popular">Popular</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="price">Price</string>

    <!--Notification Screen-->
    <string name="read">Read</string>
    <string name="unread">Unread</string>

    <!--Profile Screen-->
    <string name="save">Save</string>


    <!--About Developer-->
    <string name="about_developer">About Developer</string>
    <string name="company_detail">Marketing Knob was founded in 2009 and employs a family of highly experienced professionals. Our prime focus is to provide our clients with creative, attractive and efficient solutions for our clients. We brood over the cutting edge technologies and user experience along with the expertise and skills enhance your brand to a whole new level.</string>
    <string name="get_touch">Get In Touch</string>
    <string name="company_email">hi@marketingknob.com</string>
    <string name="company_phone">+91 98031-01887</string>


    <!--Camera Dialog-->
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="dialog_title">Choose profile image from...</string>

</resources>
