<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color_light"
    android:focusable="false"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/ll_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/pad_24dp"
                android:orientation="vertical"
                android:visibility="visible">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="@dimen/pad_80dp"
                    android:layout_height="@dimen/pad_80dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/pad_80dp"
                    android:src="@drawable/app_logo"
                    android:text="@string/app_name"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_xxxlarge" />

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/pad_24dp"
                    android:layout_marginTop="@dimen/pad_60dp"
                    android:layout_marginEnd="@dimen/pad_24dp"
                    android:layout_marginBottom="@dimen/pad_10dp"
                    android:orientation="vertical">

                    <com.rilixtech.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:padding="@dimen/pad_5dp"
                        app:ccp_clickable="false"
                        app:ccp_showFullName="false"
                        app:ccp_textColor="@color/main_color"
                        app:ccp_textSize="@dimen/font_normal"
                        app:ccp_setCountryByTimeZone="true"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/pad_5dp"
                        android:layout_marginTop="@dimen/pad_5dp"
                        android:layout_marginBottom="@dimen/pad_10dp"
                        android:theme="@style/TextLabel">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/input_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/mobile"
                            android:inputType="number"
                            android:maxLines="1"
                            android:textColor="@color/main_color"
                            android:textSize="@dimen/font_large" />

                    </android.support.design.widget.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:background="@color/main_color" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/pad_5dp"
                        android:layout_marginTop="@dimen/pad_24dp"
                        android:layout_marginBottom="@dimen/pad_10dp"
                        android:theme="@style/TextLabel">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/input_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/name"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/main_color"
                            android:textSize="@dimen/font_large" />

                    </android.support.design.widget.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:background="@color/main_color" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/pad_5dp"
                        android:layout_marginTop="@dimen/pad_24dp"
                        android:layout_marginBottom="@dimen/pad_10dp"
                        android:theme="@style/TextLabel">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/hint_email"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/main_color"
                            android:textSize="@dimen/font_large" />

                    </android.support.design.widget.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:background="@color/main_color" />

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_login_in"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/pad_48dp"
                    android:layout_marginStart="@dimen/pad_38dp"
                    android:layout_marginTop="@dimen/pad_24dp"
                    android:layout_marginEnd="@dimen/pad_38dp"
                    android:layout_marginBottom="@dimen/pad_5dp"
                    android:background="@drawable/btn_selector"
                    android:text="@string/btn_sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_xlarge" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/pad_15dp"
                    android:layout_marginBottom="@dimen/pad_15dp"
                    android:padding="@dimen/pad_5dp"
                    android:text="@string/login_mercury"
                    android:textAllCaps="false"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/font_large" />

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/ll_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/pad_24dp"
                android:orientation="vertical"
                android:visibility="gone">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/pad_15dp"
                    android:layout_marginTop="@dimen/pad_38dp"
                    android:layout_marginEnd="@dimen/pad_15dp"
                    android:text="@string/otp_message"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_large" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/pad_15dp"
                    android:layout_marginEnd="@dimen/pad_15dp"
                    android:text="1234567890"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_xlarge"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/pad_15dp"
                    android:layout_marginTop="@dimen/pad_48dp"
                    android:layout_marginEnd="@dimen/pad_15dp"
                    android:theme="@style/TextLabel">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/input_otp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/otp"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/main_color"
                        android:textSize="@dimen/font_large" />

                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginStart="@dimen/pad_15dp"
                    android:layout_marginEnd="@dimen/pad_15dp"
                    android:background="@color/main_color" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_otp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/pad_48dp"
                    android:layout_marginStart="@dimen/pad_38dp"
                    android:layout_marginTop="@dimen/pad_24dp"
                    android:layout_marginEnd="@dimen/pad_38dp"
                    android:layout_marginBottom="@dimen/pad_5dp"
                    android:background="@drawable/btn_selector"
                    android:text="@string/confim"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_xlarge" />

            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>
