<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_gradient"
    android:orientation="vertical"
    tools:context="com.marketingknob.mercury.ui.fragments.AccountFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll_main">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="@dimen/pad_120dp"
                android:layout_height="@dimen/pad_120dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/pad_30dp"
                android:src="@drawable/account"
                app:civ_border_color="@color/white"
                app:civ_border_width="1dp"
                app:civ_circle_background_color="@color/white" />


            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/pad_30dp"
                android:layout_marginTop="@dimen/pad_38dp"
                android:layout_marginEnd="@dimen/pad_30dp"
                android:orientation="vertical">

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/pad_48dp"
                    android:background="@drawable/grey_background"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/pad_5dp"
                        android:src="@drawable/call" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_mobile"
                        style="@style/TextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:hint="@string/mobile"
                        android:inputType="number"
                        android:paddingEnd="@dimen/pad_15dp"
                        android:textCursorDrawable="@drawable/white_cursor"/>

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/pad_48dp"
                    android:layout_marginTop="@dimen/pad_15dp"
                    android:background="@drawable/grey_background"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/pad_5dp"
                        android:src="@drawable/user_profile" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_username"
                        style="@style/TextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:paddingEnd="@dimen/pad_30dp"
                        android:textCursorDrawable="@drawable/white_cursor"/>

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/pad_48dp"
                    android:layout_marginTop="@dimen/pad_15dp"
                    android:background="@drawable/grey_background"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/pad_5dp"
                        android:src="@drawable/email" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_email"
                        style="@style/TextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="@string/hint_email"
                        android:inputType="text"
                        android:paddingEnd="@dimen/pad_24dp"
                        android:textCursorDrawable="@drawable/white_cursor"/>

                </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="@dimen/pad_80dp"
                android:layout_height="@dimen/pad_30dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/pad_60dp"
                android:background="@drawable/white_background"
                android:text="@string/save"
                android:textColor="@color/red"
                android:textSize="@dimen/font_normal"
                android:layout_marginBottom="@dimen/pad_15dp"/>
        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>

</android.support.v7.widget.LinearLayoutCompat>